add_subdirectory(audio_player)
add_subdirectory(empty_window)
add_subdirectory(fps)
add_subdirectory(imgui)
add_subdirectory(lighting)
add_subdirectory(lines)
add_subdirectory(rigidbody)
add_subdirectory(sprite)
add_subdirectory(suzanne)
add_subdirectory(suzanne_benchmark)
add_subdirectory(text_rendering)
add_subdirectory(texture)
add_subdirectory(triangle)
